# custom_kernel

./: README.md  client.py  config.json  config.py  pyproject.toml  run_kernel.py  test.http
src/application/executor/: commands.py  handlers.py  service.py  state.py
src/application/executor_service/: dto.py  service.py  setup.py
src/application/ijulia_adapter/: interfaces.py
src/application/stream_adapter/: dto.py  interfaces.py
src/infra/common/: thread.py
src/infra/inmemory/: stream_adapter.py
src/infra/jupyter_client/: engee_kernel_client.py  ijulia_adapter.py
src/infra/zeromq/: stream_adapter.py
src/presentation/fastapi/: dependencies.py  execution.py  setup.py  text.py
src/presentation/kernel_listener/: handlers.py  listener.py  setup.py  zmq_sender.py
templates/: index.html
